--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "@tradle/validate-resource": "^4.3.0",
     "@tradle/yuki": "^1.5.0",
     "any-promise": "1.3.0",
-    "apollo-client": "^1.9.1",
     "art": "^0.10.0",
     "assert": "^1.3.0",
     "asyncstorage-down": "^3.2.1",
@@ -110,7 +109,6 @@
     "events": "^1.1.0",
     "extend": "~2.0.1",
     "graphql-request": "^1.8.2",
-    "graphql-tag": "^2.4.2",
     "https-browserify": "0.0.1",
     "inherits": "^2.0.1",
     "jsc-android": "^236355.1.1",
@@ -256,6 +254,7 @@
   "devDependencies": {
     "@google-cloud/translate": "^1.1.0",
     "babel-eslint": "7.1.1",
+    "babel-plugin-inline-package-json": "^2.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-async-functions": "^6.3.13",
     "babel-plugin-transform-async-to-module-method": "^6.24.1",
