--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,7 +120,7 @@ def pass = getPassword("tradle", "android_keystore")
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -151,9 +151,9 @@ android {
         targetSdkVersion project.targetSdkVersion
         versionCode vbuild
         versionName vmajor + "." + vminor + "." + vpatch
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
+        // ndk {
+        //     abiFilters "armeabi-v7a", "x86"
+        // }
 
         multiDexEnabled true
     }
@@ -332,5 +332,44 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+// START(APK per arch)
+//
+// source: https://developer.android.com/studio/build/configure-apk-splits
+//
+// Map for the version code that gives each ABI a value.
+ext.abiCodes = ['armeabi-v7a':1, x86:2, x86_64:3]
+
+// For each APK output variant, override versionCode with a combination of
+// ext.abiCodes * 1000 + variant.versionCode. In this example, variant.versionCode
+// is equal to defaultConfig.versionCode. If you configure product flavors that
+// define their own versionCode, variant.versionCode uses that value instead.
+android.applicationVariants.all { variant ->
+
+  // Assigns a different version code for each output APK
+  // other than the universal APK.
+  variant.outputs.each { output ->
+
+    // Stores the value of ext.abiCodes that is associated with the ABI for this variant.
+    def baseAbiVersionCode =
+            // Determines the ABI for this variant and returns the mapped value.
+            project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+
+    // Because abiCodes.get() returns null for ABIs that are not mapped by ext.abiCodes,
+    // the following code does not override the version code for universal APKs.
+    // However, because we want universal APKs to have the lowest version code,
+    // this outcome is desirable.
+    if (baseAbiVersionCode != null) {
+
+      // Assigns the new version code to versionCodeOverride, which changes the version code
+      // for only the output APK, not for the variant itself. Skipping this step simply
+      // causes Gradle to use the value of variant.versionCode for the APK.
+      output.versionCodeOverride =
+              baseAbiVersionCode * 1000 + variant.versionCode
+    }
+  }
+}
+
+// END(APK per arch)
 
 apply plugin: 'com.google.gms.google-services'
