--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -192,7 +192,9 @@ android {
             // applicationIdSuffix ".debug"
         }
         release {
-            shrinkResources enableProguardInReleaseBuilds
+            // setting to true breaks require()'d images in JS
+            // can probably set to true after figuring this out: https://developer.android.com/studio/build/shrink-code
+            shrinkResources false
             zipAlignEnabled enableProguardInReleaseBuilds
             minifyEnabled enableProguardInReleaseBuilds
             // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
@@ -203,7 +205,9 @@ android {
             buildConfigField "String", "CODEPUSH_KEY", "\"${codePushKey}\""
         }
         releaseStaging {
-            shrinkResources enableProguardInReleaseBuilds
+            // setting to true breaks require()'d images in JS
+            // can probably set to true after figuring this out: https://developer.android.com/studio/build/shrink-code
+            shrinkResources false
             zipAlignEnabled enableProguardInReleaseBuilds
             minifyEnabled enableProguardInReleaseBuilds
             // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
