--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,7 +68,8 @@ import com.android.build.OutputFile
 project.ext.react = [
   // the name of the generated asset file containing your JS bundle
   bundleAssetName: "main.jsbundle",
-  extraPackagerArgs: ["--sourcemap-output", "$buildDir/intermediates/assets/release/main.jsbundle.map"],
+  // don't know how to exclude from apk
+  // extraPackagerArgs: ["--sourcemap-output", "$buildDir/intermediates/assets/release/main.jsbundle.map"],
   // bundleInDebug: false,
   nodeExecutableAndArgs: ["/usr/local/bin/node"],
   // bundleCommand: "ram-bundle",
@@ -178,7 +179,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
+            universalApk true  // If true, also generate a universal APK
             // https://android.stackexchange.com/questions/186334/what-percentage-of-android-devices-runs-on-x86-architecture
             include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
@@ -226,8 +227,11 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license'
         exclude 'META-INF/license.txt'
-        pickFirst 'lib/armeabi-v7a/libgnustl_shared.so'
-        pickFirst 'lib/x86/libgnustl_shared.so'
+        // exclude '**/*.jsbundle.map'  // doesn't work
+        exclude 'assets/Regula/*.dat'
+        // added when working with anyline:
+        // pickFirst 'lib/armeabi-v7a/libgnustl_shared.so'
+        // pickFirst 'lib/x86/libgnustl_shared.so'
     }
 }
 
@@ -334,7 +338,6 @@ ext.abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, 'x86':3, 'x86_64':4]
 // is equal to defaultConfig.versionCode. If you configure product flavors that
 // define their own versionCode, variant.versionCode uses that value instead.
 android.applicationVariants.all { variant ->
-
   // Assigns a different version code for each output APK
   // other than the universal APK.
   variant.outputs.each { output ->
