build(android): build Android App Bundle instead of apk

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -7,9 +7,9 @@ classpath='com.android.tools.build\:gradle\:3.0.1'
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 org.gradle.jvmargs=-Xmx4608M
 VERSION_PATCH=5
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+distributionUrl=https://services.gradle.org/distributions/gradle-4.6-all.zip
 VERSION_MINOR=3
-android.enableAapt2=false
+android.enableAapt2=true
 # compileSdkVersion=27
 # targetSdkVersion=26
 # buildToolsVersion=27.0.3
