--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,14 @@ android {
 
         multiDexEnabled true
     }
+
+    bundle {
+      // bundle per architecture
+      abi {
+          enableSplit enableSeparateBuildPerCPUArchitecture
+      }
+    }
+
     dexOptions {
         javaMaxHeapSize "4g"
     }
@@ -175,15 +183,15 @@ android {
             keyPassword pass
         }
     }
-    splits {
-        abi {
-            reset()
-            enable enableSeparateBuildPerCPUArchitecture
-            universalApk true  // If true, also generate a universal APK
-            // https://android.stackexchange.com/questions/186334/what-percentage-of-android-devices-runs-on-x86-architecture
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
-        }
-    }
+    // splits {
+    //     abi {
+    //         reset()
+    //         enable enableSeparateBuildPerCPUArchitecture
+    //         universalApk true  // If true, also generate a universal APK
+    //         // https://android.stackexchange.com/questions/186334/what-percentage-of-android-devices-runs-on-x86-architecture
+    //         include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+    //     }
+    // }
     buildTypes {
         debug {
             debuggable true
@@ -331,36 +339,36 @@ task copyDownloadableDepsToLibs(type: Copy) {
 //
 // Map for the version code that gives each ABI a value.
 // must match android.splits.abi above
-ext.abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, 'x86':3, 'x86_64':4]
+// ext.abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, 'x86':3, 'x86_64':4]
 
 // For each APK output variant, override versionCode with a combination of
 // ext.abiCodes * 1000 + variant.versionCode. In this example, variant.versionCode
 // is equal to defaultConfig.versionCode. If you configure product flavors that
 // define their own versionCode, variant.versionCode uses that value instead.
-android.applicationVariants.all { variant ->
-  // Assigns a different version code for each output APK
-  // other than the universal APK.
-  variant.outputs.each { output ->
+// android.applicationVariants.all { variant ->
+//   // Assigns a different version code for each output APK
+//   // other than the universal APK.
+//   variant.outputs.each { output ->
 
-    // Stores the value of ext.abiCodes that is associated with the ABI for this variant.
-    def baseAbiVersionCode =
-            // Determines the ABI for this variant and returns the mapped value.
-            project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+//     // Stores the value of ext.abiCodes that is associated with the ABI for this variant.
+//     def baseAbiVersionCode =
+//             // Determines the ABI for this variant and returns the mapped value.
+//             project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
 
-    // Because abiCodes.get() returns null for ABIs that are not mapped by ext.abiCodes,
-    // the following code does not override the version code for universal APKs.
-    // However, because we want universal APKs to have the lowest version code,
-    // this outcome is desirable.
-    if (baseAbiVersionCode != null) {
+//     // Because abiCodes.get() returns null for ABIs that are not mapped by ext.abiCodes,
+//     // the following code does not override the version code for universal APKs.
+//     // However, because we want universal APKs to have the lowest version code,
+//     // this outcome is desirable.
+//     if (baseAbiVersionCode != null) {
 
-      // Assigns the new version code to versionCodeOverride, which changes the version code
-      // for only the output APK, not for the variant itself. Skipping this step simply
-      // causes Gradle to use the value of variant.versionCode for the APK.
-      output.versionCodeOverride =
-              baseAbiVersionCode * 1000 + variant.versionCode
-    }
-  }
-}
+//       // Assigns the new version code to versionCodeOverride, which changes the version code
+//       // for only the output APK, not for the variant itself. Skipping this step simply
+//       // causes Gradle to use the value of variant.versionCode for the APK.
+//       output.versionCodeOverride =
+//               baseAbiVersionCode * 1000 + variant.versionCode
+//     }
+//   }
+// }
 
 // END(APK per arch)
 
