--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -270,7 +270,7 @@ dependencies {
     implementation project(':react-native-image-store')
     implementation project(':react-native-tradle-keeper')
     implementation project(':rn-fetch-blob')
-    implementation project(':blinkid-react-native')
+    // implementation project(':blinkid-react-native')
     implementation project(':react-native-awesome-card-io')
     implementation 'com.android.support:multidex:1.0.1'
     implementation project(':react-native-branch')
