--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,9 +36,9 @@ allprojects {
         // maven {
         //     url 'https://anylinesdk.blob.core.windows.net/maven/'
         // }
-        maven {
-            url 'https://maven.microblink.com'
-        }
+        // maven {
+        //     url 'https://maven.microblink.com'
+        // }
         // for react-native-camera
         maven { url "https://jitpack.io" }
         maven {
