--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -177,11 +177,15 @@ android {
     }
     splits {
         abi {
-            reset()
             enable enableSeparateBuildPerCPUArchitecture
+            reset()
             universalApk false  // If true, also generate a universal APK
             // https://android.stackexchange.com/questions/186334/what-percentage-of-android-devices-runs-on-x86-architecture
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            // include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            //
+            // Before allowing 64-bit apks, see that react native supports it
+            // https://github.com/facebook/react-native/issues/2814
+            // include "armeabi-v7a", "x86"
         }
     }
     buildTypes {
