--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -185,7 +185,7 @@ android {
             //
             // Before allowing 64-bit apks, see that react native supports it
             // https://github.com/facebook/react-native/issues/2814
-            // include "armeabi-v7a", "x86"
+            include "armeabi-v7a", "x86"
         }
     }
     buildTypes {
