--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,8 +68,12 @@ import com.android.build.OutputFile
 project.ext.react = [
   // the name of the generated asset file containing your JS bundle
   bundleAssetName: "main.jsbundle",
-  bundleInDebug: false,
-  nodeExecutableAndArgs: ["/usr/local/bin/node"]
+  // don't know how to exclude from apk
+  // extraPackagerArgs: ["--sourcemap-output", "$buildDir/intermediates/assets/release/main.jsbundle.map"],
+  // bundleInDebug: false,
+  nodeExecutableAndArgs: ["/usr/local/bin/node"],
+  // bundleCommand: "ram-bundle",
+  // extraPackagerArgs: ["--indexed-ram-bundle"]
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -91,20 +95,20 @@ def getPassword(String currentUser, String keyChain) {
 def getCodePushKey(String deployment) {
    def stdout = new ByteArrayOutputStream()
    def stderr = new ByteArrayOutputStream()
-   exec {
-       commandLine "../../scripts/get-code-push-key.sh", "android", deployment
-       standardOutput = stdout
-       errorOutput = stderr
-       ignoreExitValue false
-   }
-   //noinspection GroovyAssignabilityCheck
-   def key = stdout.toString().trim()
-   def err = stderr.toString().trim()
-   if (key.isEmpty() || !err.isEmpty()) {
-       throw new GradleException('error occurred fetching CodePush key: ' + err.toString())
+   try {
+     exec {
+         commandLine "../../scripts/get-code-push-key.sh", "android", deployment
+         standardOutput = stdout
+         errorOutput = stdout
+         ignoreExitValue false
+     }
+   } catch (err) {
+      logger.error("failed to fetch CodePush key for deployment $deployment: $stdout $stderr")
+      throw err
    }
 
-   return key
+   //noinspection GroovyAssignabilityCheck
+   return stdout.toString().trim()
 }
 
 def pass = getPassword("tradle", "android_keystore")
@@ -117,7 +121,7 @@ def pass = getPassword("tradle", "android_keystore")
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -130,8 +134,8 @@ android {
     //     targetCompatibility JavaVersion.VERSION_1_7
     // }
 
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion project.compileSdkVersion
+    buildToolsVersion project.buildToolsVersion
 
     def vmajor = project.property('VERSION_MAJOR').toInteger()
     def vminor = project.property('VERSION_MINOR').toInteger()
@@ -144,13 +148,13 @@ android {
         // KeyPairGenerator for EC is supported on APIs 23+
         // minSdkVersion 23
         // elliptic curve keys support
-        minSdkVersion 19
-        targetSdkVersion 27
+        minSdkVersion project.minSdkVersion
+        targetSdkVersion project.targetSdkVersion
         versionCode vbuild
         versionName vmajor + "." + vminor + "." + vpatch
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
+        // ndk {
+        //     abiFilters "armeabi-v7a", "x86"
+        // }
 
         multiDexEnabled true
     }
@@ -173,43 +177,50 @@ android {
     }
     splits {
         abi {
-            reset()
             enable enableSeparateBuildPerCPUArchitecture
+            reset()
             universalApk false  // If true, also generate a universal APK
+            // https://android.stackexchange.com/questions/186334/what-percentage-of-android-devices-runs-on-x86-architecture
+            // include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            //
+            // Before allowing 64-bit apks, see that react native supports it
+            // https://github.com/facebook/react-native/issues/2814
             include "armeabi-v7a", "x86"
         }
     }
     buildTypes {
         debug {
-            buildConfigField "String", "CODEPUSH_KEY", '""'
             debuggable true
+            def codePushKey = getCodePushKey("Debug")
+            buildConfigField "String", "CODEPUSH_KEY", "\"${codePushKey}\""
             // applicationIdSuffix ".debug"
         }
         release {
-            // minifyEnabled enableProguardInReleaseBuilds
+            // setting to true breaks require()'d images in JS
+            // can probably set to true after figuring this out: https://developer.android.com/studio/build/shrink-code
+            shrinkResources false
+            zipAlignEnabled enableProguardInReleaseBuilds
+            minifyEnabled enableProguardInReleaseBuilds
             // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            setProguardFiles([getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'])
+
             signingConfig signingConfigs.release
             def codePushKey = getCodePushKey("Production")
             buildConfigField "String", "CODEPUSH_KEY", "\"${codePushKey}\""
         }
         releaseStaging {
+            // setting to true breaks require()'d images in JS
+            // can probably set to true after figuring this out: https://developer.android.com/studio/build/shrink-code
+            shrinkResources false
+            zipAlignEnabled enableProguardInReleaseBuilds
+            minifyEnabled enableProguardInReleaseBuilds
+            // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            setProguardFiles([getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'])
+
             signingConfig signingConfigs.release
             def codePushKey = getCodePushKey("Staging")
             buildConfigField "String", "CODEPUSH_KEY", "\"${codePushKey}\""
             matchingFallbacks = ['release']
-        }
-    }
-    // applicationVariants are e.g. debug, release
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            // For each separate APK per architecture, set a unique version code as described here:
-            // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) {  // null for the universal-debug, universal-release variants
-                output.versionCodeOverride =
-                        versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
-            }
         }
     }
 
@@ -224,8 +235,11 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license'
         exclude 'META-INF/license.txt'
-        pickFirst 'lib/armeabi-v7a/libgnustl_shared.so'
-        pickFirst 'lib/x86/libgnustl_shared.so'
+        // exclude '**/*.jsbundle.map'  // doesn't work
+        exclude 'assets/Regula/*.dat'
+        // added when working with anyline:
+        // pickFirst 'lib/armeabi-v7a/libgnustl_shared.so'
+        // pickFirst 'lib/x86/libgnustl_shared.so'
     }
 }
 
@@ -246,58 +260,99 @@ repositories {
   maven { url 'https://maven.fabric.io/public' }
 }
 
-dependencies {
-    compile project(':blinkid-react-native')
-    compile project(':react-native-awesome-card-io')
-    compile 'com.android.support:multidex:1.0.1'
-    compile project(':react-native-branch')
-    compile project(':react-native-tcp')
-    compile project(':react-native-os')
-    compile project(':react-native-exception-handler')
-    compile project(':react-native-splash-screen')
-    compile project(':react-native-fabric')
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
-        transitive = true
+configurations.all {
+    resolutionStrategy {
+        force 'org.webkit:android-jsc:r236355'
     }
-    compile project(':react-native-async-storage-snappy')
-    // compile project(':anyline-ocr-react-native-module')
-    compile project(':react-native-local-auth')
-    compile project(':react-native-ecc')
-    compile project(':react-native-orientation')
+}
+
+dependencies {
+    compile project(':react-native-facetec-zoom')
+    compile project(':rn-fetch-blob')
     compile project(':react-native-vector-icons')
     compile project(':react-native-udp')
+    compile project(':react-native-tradle-keeper')
+    compile project(':react-native-tcp')
+    compile project(':react-native-splash-screen')
+    compile project(':react-native-regula-document-reader')
     compile project(':react-native-randombytes')
-    compile(project(':react-native-push-notification'))
+    compile project(':react-native-push-notification')
+    compile project(':react-native-os')
+    compile project(':react-native-orientation')
+    compile project(':react-native-localization')
+    compile project(':react-native-local-auth')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-keychain')
+    compile project(':react-native-image-store')
+    compile project(':react-native-image-picker')
+    compile project(':react-native-fabric')
+    compile project(':react-native-exception-handler')
+    compile project(':react-native-ecc')
+    compile project(':react-native-device-info')
+    compile project(':react-native-code-push')
+    compile project(':react-native-camera')
+    compile project(':react-native-branch')
+    compile project(':react-native-awesome-card-io')
+    compile project(':react-native-async-storage-snappy')
+    implementation project(':react-native-image-store')
+    implementation project(':react-native-tradle-keeper')
+    implementation project(':rn-fetch-blob')
+    // implementation project(':blinkid-react-native')
+    implementation project(':react-native-awesome-card-io')
+    implementation 'com.android.support:multidex:1.0.1'
+    implementation project(':react-native-branch')
+    implementation project(':react-native-tcp')
+    implementation project(':react-native-os')
+    implementation project(':react-native-exception-handler')
+    implementation project(':react-native-splash-screen')
+    implementation project(':react-native-fabric')
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
+        transitive = true
+    }
+    implementation project(':react-native-async-storage-snappy')
+    // implementation project(':anyline-ocr-react-native-module')
+    implementation project(':react-native-local-auth')
+    implementation project(':react-native-ecc')
+    implementation project(':react-native-orientation')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-udp')
+    implementation project(':react-native-randombytes')
+    implementation(project(':react-native-push-notification'))
     {
         exclude group: 'com.google.android.gms'
     }
-    compile project(':react-native-localization')
-    compile project(':react-native-linear-gradient')
-    compile project(':react-native-keychain')
-    compile project(':react-native-image-picker')
-    compile(project(':react-native-device-info')) {
+    implementation project(':react-native-localization')
+    implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-keychain')
+    implementation project(':react-native-image-picker')
+    implementation(project(':react-native-device-info')) {
         exclude group: 'com.google.android.gms'
     }
-    compile "com.google.android.gms:play-services-base:11.8.0"
-    compile ('com.google.android.gms:play-services-gcm:11.8.0') {
+    implementation "com.google.android.gms:play-services-base:${googlePlayServicesVersion}"
+    implementation ("com.google.android.gms:play-services-gcm:${googlePlayServicesVersion}") {
         force = true;
     }
 
-    compile project(':react-native-code-push')
-    compile (project(':react-native-camera')) {
+    implementation project(':react-native-code-push')
+    implementation (project(':react-native-camera')) {
       exclude group: "com.google.android.gms"
-      compile "com.android.support:exifinterface:${supportLibVersion}"
-      compile ('com.google.android.gms:play-services-vision:11.8.0') {
+      implementation "com.android.support:exifinterface:${supportLibVersion}"
+      implementation ("com.google.android.gms:play-services-vision:${googlePlayServicesVersion}") {
         force = true
       }
     }
-    // compile ("com.google.android.gms:play-services-vision:11.8.0") {
+    // implementation ("com.google.android.gms:play-services-vision:${googlePlayServicesVersion}") {
     //   force = true;
     // }
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-facetec-zoom')
+
+    implementation project(':react-native-regula-document-reader')
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation ("com.android.support:appcompat-v7:${supportLibVersion}") {
+      force = true
+    }
+
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 task copyDownloadableDepsToLibs(type: Copy) {
@@ -305,4 +360,43 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+// START(APK per arch)
+//
+// source: https://developer.android.com/studio/build/configure-apk-splits
+//
+// Map for the version code that gives each ABI a value.
+// must match android.splits.abi above
+ext.abiCodes = ['armeabi-v7a':1, 'arm64-v8a':2, 'x86':3, 'x86_64':4]
+
+// For each APK output variant, override versionCode with a combination of
+// ext.abiCodes * 1000 + variant.versionCode. In this example, variant.versionCode
+// is equal to defaultConfig.versionCode. If you configure product flavors that
+// define their own versionCode, variant.versionCode uses that value instead.
+android.applicationVariants.all { variant ->
+  // Assigns a different version code for each output APK
+  // other than the universal APK.
+  variant.outputs.each { output ->
+
+    // Stores the value of ext.abiCodes that is associated with the ABI for this variant.
+    def baseAbiVersionCode =
+            // Determines the ABI for this variant and returns the mapped value.
+            project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+
+    // Because abiCodes.get() returns null for ABIs that are not mapped by ext.abiCodes,
+    // the following code does not override the version code for universal APKs.
+    // However, because we want universal APKs to have the lowest version code,
+    // this outcome is desirable.
+    if (baseAbiVersionCode != null) {
+
+      // Assigns the new version code to versionCodeOverride, which changes the version code
+      // for only the output APK, not for the variant itself. Skipping this step simply
+      // causes Gradle to use the value of variant.versionCode for the APK.
+      output.versionCodeOverride =
+              baseAbiVersionCode * 1000 + variant.versionCode
+    }
+  }
+}
+
+// END(APK per arch)
+
+apply plugin: 'com.google.gms.google-services'
