--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+import org.gradle.util.VersionNumber;
+
 buildscript {
     repositories {
+        google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-//        classpath 'com.google.gms:google-services:3.0.0' // Needed for Firebase Analytics
+        classpath 'com.google.gms:google-services:4.0.1' // Needed for Firebase Analytics
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,35 +22,67 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven {
+            // Local Maven repo containing AARs with JSC library built for Android
+            url "$rootDir/../node_modules/jsc-android/dist"
+        }
         // maven {
         //     url 'https://anylinesdk.blob.core.windows.net/maven/'
         // }
-        maven {
-            url 'https://maven.microblink.com'
-        }
+        // maven {
+        //     url 'https://maven.microblink.com'
+        // }
         // for react-native-camera
         maven { url "https://jitpack.io" }
+        maven {
+            url "http://maven.regulaforensics.com/RegulaDocumentReader"
+        }
         flatDir {
             dirs 'libs'
-            dirs "$rootDir/../node_modules/react-native-facetec-zoom/android/lib"
         }
-        google()
     }
-    configurations.all {
-        resolutionStrategy.force "com.android.support:support-v4:26.0.2"
-    }
+     configurations.all {
+         resolutionStrategy.force "com.android.support:support-v4:${supportLibVersion}"
+         resolutionStrategy.force "com.android.support:appcompat-v7:${supportLibVersion}"
+     }
 }
 
 ext {
-    // compileSdkVersion           = 26
-    // targetSdkVersion            = 26
-    // buildToolsVersion           = "26.0.2"
-    // googlePlayServicesVersion   = "12.0.1"
-    supportLibVersion           = "27.1.0"
+    compileSdkVersion           = 27
+    targetSdkVersion            = 26
+    buildToolsVersion           = "27.0.3"
+    supportLibVersion           = "27.1.1"
+    googlePlayServicesVersion   = "11.8.0"
+    minSdkVersion               = 19
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
+    distributionUrl = distributionUrl.replace("bin", "all")
+}
+
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android") && VersionNumber.parse(project.property("android").compileSdkVersion) < VersionNumber.parse("27.0.0")) {
+            android {
+                compileSdkVersion rootProject.ext.compileSdkVersion
+                buildToolsVersion rootProject.ext.buildToolsVersion
+            }
+        }
+    }
+    if (project.name.contains('react-native-image-picker') || project.name.contains('react-native-vector-icons')) {
+        buildscript {
+            repositories {
+                jcenter()
+                maven { url "https://dl.bintray.com/android/android-tools/"  }
+            }
+        }
+    }
 }
