--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,11 +2,17 @@
 VERSION_MAJOR=1
 MYAPP_RELEASE_KEY_ALIAS=android-release-key
 android.useDeprecatedNdk=true
-VERSION_BUILD=26
+VERSION_BUILD=78
 classpath='com.android.tools.build\:gradle\:3.0.1'
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 org.gradle.jvmargs=-Xmx4608M
-VERSION_PATCH=4
+VERSION_PATCH=11
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
+VERSION_MINOR=3
 android.enableAapt2=false
-VERSION_MINOR=1
+# compileSdkVersion=27
+# targetSdkVersion=26
+# buildToolsVersion=27.0.3
+# supportLibVersion=27.1.0
+# googlePlayServicesVersion=11.8.0
+# minSdkVersion=19
