--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -4,7 +4,10 @@ target 'Tradle' do
   # otherwise get errors like: 'duplicate symbol _GTMNSDataZlibRemainingBytesKey in: ...libGoogleToolboxForMac.a'
   # use_frameworks!
 
-  pod 'PPBlinkID', '4.1.0'
+#  pod 'PPBlinkID', '4.5.0'
+  pod 'DocumentReader', '~> 4.1'
+  pod 'DocumentReaderFull', '~> 4.1'
+
 #  pod 'Firebase/Core', '4.13.0'
 #  pod 'FirebaseAnalytics', '4.2.0'
 #  pod 'iProov', :git => 'https://github.com/iProov/iproov-ios-pod.git'
@@ -13,6 +16,8 @@ target 'Tradle' do
 #  pod 'Firebase', '~> 3.16', :subspecs => [
 #    'Analytics'
 #  ]
+
+#  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
 end
 
