--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "REACT_DEBUGGER='rndebugger-open --open --port 8081' && node --max_old_space_size=4096 ./node_modules/.bin/react-native start",
+    "start": "./scripts/start.sh",
+    "start:resetcache": "RESET_CACHE=1 ./scripts/start.sh",
+    "start:ios": "PLATFORM=ios ./scripts/start.sh",
+    "start:android": "PLATFORM=android ./scripts/start.sh",
     "start:chrome": "&& node --max_old_space_size=4096 ./node_modules/.bin/react-native start",
     "postinstall": "./scripts/postinstall.sh",
     "postinstal": "npm run postinstall",
@@ -41,20 +44,24 @@
     "pushenv": "./scripts/pushenv.sh",
     "translate:strings": "node ./scripts/translateStrings -d ./utils -l vi,bn,fil,es,fr,nl,ru,km",
     "translate:moreStrings": "node ./scripts/translateStrings -d ./utils -l th,km,my",
-    "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
+    "translate:xmlstrings": "node ./scripts/translateStrings -d ./android/app/src/main/res/values -l vi,bn,fil,es,fr,nl,ru,km -f",
+    "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android",
+    "nibble": "eslint-nibble Components/ Store/ utils/ index.common.js"
   },
   "dependencies": {
-    "@tradle/aws-client": "^1.9.2",
+    "@tradle/aws-client": "^3.0.0",
     "@tradle/bitcoin-adapter": "github:tradle/bitcoin-adapter",
+    "@tradle/bitcoinjs-lib": "^1.6.1",
     "@tradle/biz-plugins": "github:tradle/biz-plugins",
     "@tradle/build-resource": "^4.0.2",
     "@tradle/cb-blockr": "^3.2.1",
-    "@tradle/constants": "^2.4.0",
+    "@tradle/constants": "^2.5.0",
     "@tradle/custom-models": "github:tradle/custom-models",
-    "@tradle/engine": "^7.0.1",
+    "@tradle/embed": "^1.2.4",
+    "@tradle/engine": "^8.1.0",
     "@tradle/errors": "^1.1.1",
     "@tradle/ethereum-adapter-etherscan": "github:tradle/ethereum-adapter-etherscan",
-    "@tradle/keeper": "^3.2.0",
+    "@tradle/keeper": "^3.4.0",
     "@tradle/lens": "^1.3.1",
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
@@ -63,20 +70,19 @@
     "@tradle/models-onfido": "github:tradle/models-onfido",
     "@tradle/models-products-bot": "github:tradle/models-products-bot",
     "@tradle/multiqueue": "^2.3.1",
-    "@tradle/protocol": "^4.2.0",
-    "@tradle/qr-schema": "^1.11.0",
+    "@tradle/promise-utils": "^1.1.0",
+    "@tradle/protocol": "^5.0.1",
+    "@tradle/qr-schema": "^2.0.0",
     "@tradle/restore": "github:tradle/restore",
     "@tradle/validate-model": "^7.1.1",
     "@tradle/validate-resource": "^4.3.0",
     "@tradle/yuki": "^1.5.0",
     "any-promise": "1.3.0",
-    "apollo-client": "^1.9.1",
     "art": "^0.10.0",
     "assert": "^1.3.0",
-    "asyncstorage-down": "^3.1.1",
+    "asyncstorage-down": "^3.2.1",
     "aws-iot-device-sdk": "github:mvayngrib/aws-iot-device-sdk-js",
     "backoff": "^2.4.1",
-    "blinkid-react-native": "^4.1.0",
     "bluebird": "2.11.0",
     "bluebird-q": "1.0.3",
     "browserify-sign": "^4.0.4",
@@ -97,13 +103,14 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "dot-prop": "~4.2.0",
-    "error-ex": "^1.3.1",
+    "error-ex": "^1.3.2",
     "es6-symbol": "~3.1.1",
     "events": "^1.1.0",
     "extend": "~2.0.1",
-    "graphql-tag": "^2.4.2",
+    "graphql-request": "^1.8.2",
     "https-browserify": "0.0.1",
     "inherits": "^2.0.1",
+    "jsc-android": "^236355.1.1",
     "json-stringify-safe": "^5.0.1",
     "level-change-processor": "github:mvayngrib/level-change-processor#7100404",
     "levelup": "^0.18.6",
@@ -112,13 +119,11 @@
     "map-stream": "0.0.6",
     "mockery": "^1.4.0",
     "moment": "^2.22.2",
-    "my-local-ip": "^1.0.0",
     "nkey": "^2.0.2",
     "nkey-bitcoin": "^1.2.0",
     "nkey-curve25519": "^1.0.1",
     "nkey-ecdsa": "^1.1.0",
     "nkey-ethereum": "github:tradle/nkey-ethereum",
-    "node-haste": "github:mvayngrib/node-haste#766d7e6",
     "object.omit": "^2.0.1",
     "object.pick": "^1.3.0",
     "once": "^1.4.0",
@@ -138,12 +143,12 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^0.6.1",
     "react-native-app-intro": "github:tradle/react-native-app-intro#dev",
-    "react-native-async-storage-rocks": "^2.0.0",
-    "react-native-async-storage-snappy": "1.1.0",
+    "react-native-async-storage-rocks": "^2.2.0",
+    "react-native-async-storage-snappy": "^1.2.1",
     "react-native-awesome-card-io": "^0.7.0",
     "react-native-branch": "^2.2.4",
     "react-native-button": "^2.3.0",
-    "react-native-camera": "github:mvayngrib/react-native-camera#1.1.4",
+    "react-native-camera": "github:react-native-community/react-native-camera#fd87a34",
     "react-native-carousel": "^0.11.0",
     "react-native-code-push": "^5.4.0",
     "react-native-collapsible": "^0.10.0",
@@ -161,11 +166,12 @@
     "react-native-gesture-password": "github:mvayngrib/react-native-gesture-password",
     "react-native-gifted-messenger": "github:pgmemk/react-native-gifted-messenger#dev",
     "react-native-http": "github:tradle/react-native-http#834492d",
-    "react-native-image-picker": "github:tradle/react-native-image-picker",
+    "react-native-image-picker": "github:tradle/react-native-image-picker#imagestore",
+    "react-native-image-store": "github:tradle/react-native-image-store",
     "react-native-infinite-scroll-view": "github:tradle/react-native-infinite-scroll-view",
     "react-native-keychain": "github:mvayngrib/react-native-keychain#rn40",
     "react-native-lazyload": "github:mvayngrib/react-native-lazyload",
-    "react-native-level": "^3.0.0",
+    "react-native-level": "^3.1.0",
     "react-native-level-fs": "^3.0.0",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-local-auth": "github:tradle/react-native-local-auth",
@@ -176,9 +182,10 @@
     "react-native-passcode-status": "1.1.0",
     "react-native-progress": "^3.4.0",
     "react-native-prompt": "github:tradle/react-native-prompt",
-    "react-native-push-notification": "^3.0.0",
+    "react-native-push-notification": "github:zo0r/react-native-push-notification#5b34f15",
     "react-native-qrcode": "^0.2.6",
-    "react-native-randombytes": "^3.1.0",
+    "react-native-randombytes": "^3.5.1",
+    "react-native-regula-document-reader": "github:tradle/react-native-regula-document-reader",
     "react-native-scrollable-tab-view": "github:tradle/react-native-scrollable-tab-view#fixes_android",
     "react-native-search-bar": "^3.4.0",
     "react-native-signature-pad": "github:tradle/react-native-signature-pad",
@@ -186,6 +193,7 @@
     "react-native-swipeout": "^2.3.3",
     "react-native-switch-selector": "^1.0.7",
     "react-native-tcp": "^3.2.1",
+    "react-native-tradle-keeper": "github:tradle/react-native-tradle-keeper",
     "react-native-udp": "^2.0.0",
     "react-native-vector-icons": "^4.1.1",
     "react-timer-mixin": "^0.13.3",
@@ -193,6 +201,7 @@
     "reflux": "^0.4.1",
     "regenerator": "^0.8.42",
     "rn-fetch": "^1.1.0",
+    "rn-fetch-blob": "github:mvayngrib/rn-fetch-blob",
     "rn-markdown": "^1.2.1",
     "stable-sha1": "~1.0.1",
     "stream-browserify": "^1.0.0",
@@ -210,7 +219,6 @@
     "url": "^0.10.3",
     "util": "^0.10.3",
     "vm-browserify": "0.0.4",
-    "xml2js": "^0.4.19",
     "xtend": "~4.0.0",
     "ya-promise-queue": "1.1.0"
   },
@@ -240,27 +248,32 @@
     "timers": "timers-browserify",
     "os": "react-native-os",
     "net": "react-native-tcp",
-    "tls": false
+    "tls": false,
+    "art": false
   },
   "devDependencies": {
     "@google-cloud/translate": "^1.1.0",
     "babel-eslint": "7.1.1",
+    "babel-plugin-inline-package-json": "^2.0.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-async-functions": "^6.3.13",
     "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
-    "detox": "^7.4.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "6.9.0",
-    "eslint-plugin-react-native": "2.2.1",
+    "eslint-plugin-react-native": "^3.2.1",
     "eslint-plugin-standard": "^1.3.2",
+    "fast-xml-parser": "^3.12.10",
     "husky": "^0.13.2",
     "minimist": "^1.2.0",
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-3.5.3.tgz",
-    "rn-nodeify": "github:tradle/rn-nodeify#dev",
+    "my-local-ip": "^1.0.0",
+    "node-haste": "github:mvayngrib/node-haste#766d7e6",
+    "rn-nodeify": "github:tradle/rn-nodeify#mangle",
     "source-map": "^0.5.3",
     "write-file-atomic": "https://registry.npmjs.org/write-file-atomic/-/write-file-atomic-1.3.4.tgz",
     "xcode": "https://registry.npmjs.org/xcode/-/xcode-0.9.3.tgz"
@@ -291,7 +304,8 @@
     "timers": "timers-browserify",
     "os": "react-native-os",
     "net": "react-native-tcp",
-    "tls": false
+    "tls": false,
+    "art": false
   },
   "detox": {
     "configurations": {
