chore: change push-environment script

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "fix:staging": "node ./scripts/fix-staging.js",
     "build:codepush:android": "./scripts/release-android.sh",
     "build:codepush:ios": "echo 'ERROR: PLEASE BUILD IN XCODE FOR NOW'",
-    "pushenv": "./scripts/pushenv.sh",
+    "pushenv": "./scripts/push-environment.sh",
+    "diffenv": "./scripts/diff-environment.sh",
     "translate:strings": "node ./scripts/translateStrings -d ./utils -l vi,bn,fil,es,fr,nl,ru,km",
     "translate:moreStrings": "node ./scripts/translateStrings -d ./utils -l th,km,my",
     "translate:xmlstrings": "node ./scripts/translateStrings -d ./android/app/src/main/res/values -l vi,bn,fil,es,fr,nl,ru,km -f",
