--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "android:dryrun": "cd iOS && bundle exec fastlane android release_dryrun $@",
     "android:release": "cd iOS && bundle exec fastlane android release $@",
     "loadsecrets": "./scripts/placesecrets.sh",
-    "fixasyncstorage": "cp AsyncStorage/AsyncStorage.js1 node_modules/react-native/Libraries/Storage/AsyncStorage.js && cp AsyncStorage/AsyncStorageTypes.js1 node_modules/react-native/Libraries/Storage/AsyncStorageTypes.js",
     "clean:node_modules": "./scripts/clean_node_modules.js",
     "update:models": "npm i -S tradle/models tradle/custom-models tradle/models-corporate-onboarding tradle/models-nz tradle/models-onfido tradle/models-products-bot && ./reshrink.sh",
     "push:ios:staging": "./scripts/code-push.js --platform ios --stage Staging",
@@ -51,6 +50,7 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^2.0.0",
+    "@react-native-community/viewpager": "^1.1.5",
     "@tradle/aws-client": "^3.1.1",
     "@tradle/bitcoin-adapter": "github:tradle/bitcoin-adapter",
     "@tradle/bitcoinjs-lib": "^1.6.1",
@@ -205,7 +205,7 @@
     "regenerator": "^0.8.42",
     "rn-fetch": "^1.1.0",
     "rn-fetch-blob": "github:mvayngrib/rn-fetch-blob",
-    "rn-markdown": "^1.2.1",
+    "rn-markdown": "^1.3.2",
     "stable-sha1": "~1.0.1",
     "stream-browserify": "^1.0.0",
     "stream-collector": "^1.0.1",
