feat: upgrade to rn 0.59.3

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,14 @@ android {
     //     targetCompatibility JavaVersion.VERSION_1_7
     // }
 
+    // compileSdkVersion project.compileSdkVersion
     compileSdkVersion project.compileSdkVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildToolsVersion project.buildToolsVersion
 
     def vmajor = project.property('VERSION_MAJOR').toInteger()
@@ -148,6 +155,8 @@ android {
         // KeyPairGenerator for EC is supported on APIs 23+
         // minSdkVersion 23
         // elliptic curve keys support
+        // minSdkVersion project.minSdkVersion
+        // targetSdkVersion project.targetSdkVersion
         minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionCode vbuild
@@ -185,6 +194,7 @@ android {
             //
             // Before allowing 64-bit apks, see that react native supports it
             // https://github.com/facebook/react-native/issues/2814
+            // include "armeabi-v7a", "x86", "arm64-v8a", "x86-64"
             include "armeabi-v7a", "x86"
         }
     }
@@ -277,6 +287,7 @@ dependencies {
     implementation project(':react-native-awesome-card-io')
     implementation 'com.android.support:multidex:1.0.1'
     implementation project(':react-native-branch')
+    implementation "io.branch.sdk.android:library:3.0.4"
     implementation project(':react-native-tcp')
     implementation project(':react-native-os')
     implementation project(':react-native-exception-handler')
@@ -352,6 +363,7 @@ android.applicationVariants.all { variant ->
   // Assigns a different version code for each output APK
   // other than the universal APK.
   variant.outputs.each { output ->
+    // def versionCodes = ["armeabi-v7a":1, "x86":2, "arm64-v8a": 3, "x86-64": 4]
 
     // Stores the value of ext.abiCodes that is associated with the ABI for this variant.
     def baseAbiVersionCode =
