--- a/iOS/Tradle/Info.plist
+++ b/iOS/Tradle/Info.plist
@@ -65,7 +65,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>take photos, scan documents and QR codes</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>choose photos from library</string>
 	<key>UIAppFonts</key>
