--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         }
     }
     dependencies {
+        // classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath 'com.google.gms:google-services:4.0.1' // Needed for Firebase Analytics
 
@@ -52,13 +53,13 @@ allprojects {
         }
     }
      configurations.all {
-        resolutionStrategy {
+         resolutionStrategy {
             eachDependency { DependencyResolveDetails details ->
               if (details.requested.group == 'com.facebook.react' && details.requested.name == 'react-native') {
                 details.useVersion "0.59.5"
               }
             }
-        }
+         }
          resolutionStrategy.force "com.android.support:support-v4:${supportLibVersion}"
          resolutionStrategy.force "com.android.support:appcompat-v7:${supportLibVersion}"
      }
