feat: document OCR project

--- a/package.json
+++ b/package.json
@@ -157,7 +157,8 @@
     "react-native-datepicker": "github:pgmemk/react-native-datepicker#dev",
     "react-native-deprecated-custom-components": "github:tradle/react-native-custom-components",
     "react-native-device-info": "^0.21.2",
-    "react-native-ecc": "^2.1.0",
+    "react-native-document-picker": "^2.3.0",
+    "react-native-ecc": "^2.2.0",
     "react-native-exception-handler": "2.2.0",
     "react-native-fabric": "^0.4.1",
     "react-native-fabric-crashlytics": "0.1.8",
@@ -198,6 +199,8 @@
     "react-native-tradle-keeper": "github:tradle/react-native-tradle-keeper",
     "react-native-udp": "^2.0.0",
     "react-native-vector-icons": "^4.1.1",
+    "react-native-view-pdf": "^0.8.6",
+    "react-native-webview": "^5.7.2",
     "react-timer-mixin": "^0.13.3",
     "readable-stream": "^1.0.33",
     "reflux": "^0.4.1",
