--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint --quiet .",
     "precommit": "npm run lint",
     "prepush": "npm run lint",
-    "update:models": "npm i -S tradle/models tradle/custom-models tradle/models-corporate-onboarding tradle/models-nz tradle/models-onfido tradle/models-products-bot && ./reshrink.sh",
+    "update:models": "npm i -S tradle/models tradle/custom-models tradle/models-corporate-onboarding pgmemk/models-nz tradle/models-onfido tradle/models-products-bot && ./reshrink.sh",
     "translate:strings": "node ./scripts/translateStrings -d ./utils",
     "translate:xmlstrings": "node ./scripts/translateStrings -d ./android/app/src/main/res/values -l vi,bn,fil,es,fr,nl,ru,km -f",
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android",
@@ -50,7 +50,7 @@
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-corporate-onboarding": "github:tradle/models-corporate-onboarding",
-    "@tradle/models-nz": "github:tradle/models-nz",
+    "@tradle/models-nz": "github:pgmemk/models-nz",
     "@tradle/models-onfido": "github:tradle/models-onfido",
     "@tradle/models-products-bot": "github:tradle/models-products-bot",
     "@tradle/multiqueue": "^2.3.1",
