refactor: models-nz moved to a different repo

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "android:release": "cd iOS && bundle exec fastlane android release $@",
     "loadsecrets": "./scripts/placesecrets.sh",
     "clean:node_modules": "./scripts/clean_node_modules.js",
-    "update:models": "npm i -S tradle/models tradle/custom-models tradle/models-corporate-onboarding tradle/models-nz tradle/models-onfido tradle/models-products-bot && ./reshrink.sh",
+    "update:models": "npm i -S tradle/models tradle/custom-models tradle/models-corporate-onboarding pgmemk/models-nz tradle/models-onfido tradle/models-products-bot && ./reshrink.sh",
     "push:ios:staging": "./scripts/code-push.js --platform ios --stage Staging",
     "push:ios:prod": "./scripts/code-push.js --platform ios --stage Production",
     "push:android:staging": "./scripts/code-push.js --platform android --stage Staging",
@@ -68,7 +68,7 @@
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-corporate-onboarding": "github:tradle/models-corporate-onboarding",
-    "@tradle/models-nz": "github:tradle/models-nz",
+    "@tradle/models-nz": "github:pgmemk/models-nz",
     "@tradle/models-onfido": "github:tradle/models-onfido",
     "@tradle/models-products-bot": "github:tradle/models-products-bot",
     "@tradle/multiqueue": "^2.3.1",
