--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,5 @@ android.enableAapt2=false
 # supportLibVersion=27.1.0
 # googlePlayServicesVersion=11.8.0
 # minSdkVersion=19
+android.useAndroidX=true
+android.enableJetifier=true
