--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:ios": "PLATFORM=ios ./scripts/start.sh",
     "start:android": "PLATFORM=android ./scripts/start.sh",
     "start:chrome": "&& node --max_old_space_size=4096 ./node_modules/.bin/react-native start",
-    "postinstall": "./scripts/postinstall.sh",
+    "postinstall": "./scripts/postinstall.sh  &&  jetify -r",
     "postinstal": "npm run postinstall",
     "postintall": "npm run postinstall",
     "postintsal": "npm run postinstall",
@@ -49,8 +49,8 @@
     "nibble": "eslint-nibble Components/ Store/ utils/ index.common.js"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "^2.0.0",
-    "@react-native-community/viewpager": "^1.1.5",
+    "@react-native-community/netinfo": "^5.3.2",
+    "@react-native-community/viewpager": "^2.0.2",
     "@tradle/aws-client": "^3.1.1",
     "@tradle/bitcoin-adapter": "github:tradle/bitcoin-adapter",
     "@tradle/bitcoinjs-lib": "^1.6.1",
@@ -278,6 +278,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "fast-xml-parser": "^3.12.10",
     "husky": "^0.13.2",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.53.1",
     "minimist": "^1.2.0",
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-3.5.3.tgz",
