--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 include ':app'
+include ':react-native-document-reader-core-fullrfid'
+project(':react-native-document-reader-core-fullrfid').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-document-reader-core-fullrfid/android')
+include ':react-native-document-reader-api'
+project(':react-native-document-reader-api').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-document-reader-api/android')
 include ':react-native-exit-app'
 project(':react-native-exit-app').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-exit-app/android')
 include ':jail-monkey'
@@ -21,8 +25,8 @@ include ':react-native-tcp'
 project(':react-native-tcp').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-tcp/android')
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
-include ':react-native-regula-document-reader'
-project(':react-native-regula-document-reader').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-regula-document-reader/android')
+// include ':react-native-regula-document-reader'
+// project(':react-native-regula-document-reader').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-regula-document-reader/android')
 include ':react-native-randombytes'
 project(':react-native-randombytes').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-randombytes/android')
 include ':react-native-push-notification'
