--- a/package.json
+++ b/package.json
@@ -160,6 +160,8 @@
     "react-native-deprecated-custom-components": "github:tradle/react-native-custom-components",
     "react-native-device-info": "^0.21.2",
     "react-native-document-picker": "^2.3.0",
+    "react-native-document-reader-api": "^5.0.0",
+    "react-native-document-reader-core-fullrfid": "^5.0.0",
     "react-native-ecc": "^2.2.0",
     "react-native-exception-handler": "2.2.0",
     "react-native-exit-app": "^1.1.0",
@@ -188,7 +190,6 @@
     "react-native-push-notification": "github:zo0r/react-native-push-notification#5b34f15",
     "react-native-qrcode": "^0.2.6",
     "react-native-randombytes": "^3.5.1",
-    "react-native-regula-document-reader": "github:tradle/react-native-regula-document-reader",
     "react-native-scrollable-tab-view": "github:tradle/react-native-scrollable-tab-view#fixes_android",
     "react-native-search-bar": "^3.4.3",
     "react-native-signature-pad": "github:tradle/react-native-signature-pad",
